--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="add_patient">Add Patient</string>
+    <string name="mac_address">Mac Address</string>
+    <string name="name">Name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="view_patients">View Patients</string>
 </resources>
