--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="disconnect">Disconnect</string>
     <string name="connect_to_ap">Connect to AP</string>
     <string name="alert_received">Alert Received!</string>
+    <string name="check_risk">Check Risk</string>
 </resources>
